--- a/index.html
+++ b/index.html
@@ -14,9 +14,31 @@
                 <a href="">Inicio</a>
                 <a href="">Séries</a>
                 <a href="">Filmes</a>
-                <a href="">Documentários</a>
+                <a href="">Bombando</a>
+                <a href="">Minha lista</a>
             </nav>
         </div>
     </header>
-</body>
+   
+    <main>
+        <div class="filme-principal">
+            <div class="container">
+                <h3 class="titulo">O GAMBITO DA RAINHA</h3>
+                <p class="descricao">Em um orfanato nos anos 1950, uma garota-prodígio do xadrez luta contra o vício  em uma jornada improvável para se tornar a número 1 do mundo.</p>
+                <div class="avaliacao">
+                    <img src="./img/avaliacao.jpg" alt="">
+                </div>
+                <div class="botoes">
+                    <button role="button" class="botao">
+                        <a href="#">Assistir</a>
+                    </button>
+                    <button role="button" class="botao">
+                        <a href="#">Mais informações</a>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </main>
+
+</body> 
 </html>
