Estilizando os botões do banner

--- a/index.html
+++ b/index.html
@@ -29,12 +29,8 @@
                     <img src="./img/avaliacao.jpg" alt="">
                 </div>
                 <div class="botoes">
-                    <button role="button" class="botao">
-                        <a href="#">Assistir</a>
-                    </button>
-                    <button role="button" class="botao">
-                        <a href="#">Mais informações</a>
-                    </button>
+                    <button role="button" class="botao">Assistir</button>
+                    <button role="button" class="botao bkcolor">Mais Informações</button>
                 </div>
             </div>
         </div>
