--- a/index.html
+++ b/index.html
@@ -4,37 +4,174 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/main.css">
-    <title>NETFLIX CLONE </title>
+
+    <!--responsividade-->
+    <link rel="stylesheet" href="./style/responsive.css">
+
+    <!--owl css-->
+    <link rel="stylesheet" href="./style/owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="./style/owl/owl.theme.default.min.css">
+
+    <title>NETFLIX CLONE</title>
 </head>
 <body>
-    <header>
+    <header class="navbar-fixed-top">
         <div class="container">
-            <h2 class="logo">NETFLIX</h2>
-            <nav>
-                <a href="">Inicio</a>
-                <a href="">Séries</a>
-                <a href="">Filmes</a>
-                <a href="">Bombando</a>
-                <a href="">Minha lista</a>
-            </nav>
+            <div class="menu respon">
+                <h2 class="logo">NETFLIX</h2>
+                <nav>
+                    <a href="">Inicio</a>
+                    <a href="">Séries</a>
+                    <a href="">Filmes</a>
+                    <a href="">Bombando</a>
+                    <a href="">Minha lista</a>
+                </nav>
+            </div>
+            <div class="menu-sec respon">
+                <i class="fas fa-search"></i>
+                <i class="fas fa-gift"></i>
+                <img src="./img/notf.svg" alt="imagem de um sino simbolizando notificações">
+                <img class="perfil" src="./img/thaisa.jpg" alt="Imagem do perfil do usuário">
+            </div>
         </div>
     </header>
    
     <main>
         <div class="filme-principal">
             <div class="container">
-                <h3 class="titulo">O GAMBITO DA RAINHA</h3>
-                <p class="descricao">Em um orfanato nos anos 1950, uma garota-prodígio do xadrez luta contra o vício  em uma jornada improvável para se tornar a número 1 do mundo.</p>
+                <h3 class="titulo">O GAMBITO <br>DA RAINHA</h3>
+                <p class="descricao">Em um orfanato nos anos 1950, uma garota-prodígio do xadrez <br>luta contra o vício  em uma jornada improvável para se tornar a <br> número 1 do mundo.</p>
                 <div class="avaliacao">
                     <img src="./img/avaliacao.jpg" alt="">
                 </div>
                 <div class="botoes">
-                    <button role="button" class="botao">Assistir</button>
-                    <button role="button" class="botao bkcolor">Mais Informações</button>
+                    <button role="button" class="botao bkcolor2">
+                        <i class="fas fa-play"></i>
+                        Assistir
+                    </button>
+                    <button role="button" class="botao bkcolor1">
+                        <i class="fas fa-info-circle"></i>
+                        Mais Informações
+                    </button>
                 </div>
             </div>
         </div>
     </main>
+    <div class="carrosel-filmes">
+        <h2 class="classificacao">Séries</h2>
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-filme" src="./img/img (38).jpg" alt="imagem do filme Cobra Kai">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="./img/img (26).jpg" alt="imagem do filme O Mundo Sombrio De Sabrina">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="./img/img (20).jpg" alt="imagem do filme How To Get Away With Murder">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="./img/img (30).jpg" alt="imagem do filme Atypical">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="./img/img (32).jpg" alt="imagem do filme Friends">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="./img/img (33).jpg" alt="imagem do filme The Crown">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="./img/img (16).jpg" alt="imagem do filme Narcos Mexico">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="./img/img (44).jpg" alt="imagem do filme Girls From Ipanema">
+            </div>
+        </div>
+        <h2 class="classificacao">Continuar assistindo como Thaisa</h2>
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-filme" src="./img/img (36).jpg" alt="imagem do filme Enola Holmes">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="./img/img (37).jpg" alt="imagem do filme Minimalism">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="./img/img (45).jpg" alt="imagem do filme Seven Pounds">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="./img/img (34).jpg" alt="imagem do filme The Kissing Booth 2">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="./img/img (39).jpg" alt="imagem do filme All The Bright Places">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="./img/img (9).jpg" alt="imagem do filme Your Name">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="./img/img (14).jpg" alt="imagem do filme The Hunger Games Catching Fire">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="./img/img (21).jpg" alt="imagem do filme Scooby-Doo">
+            </div>
+        </div>
+        <h2 class="classificacao">Em alta</h2>
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-filme" src="./img/img (46).jpg" alt="imagem do filme Concussion">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="./img/img (2).jpg" alt="imagem do filme Patch Adams">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="./img/img (1).jpg" alt="imagem do filme Nappily Ever After">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="./img/img (28).jpg" alt="imagem do filme As Telefonistas">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="./img/img (3).jpg" alt="imagem do filme To All the Boys I've Loved Before">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="./img/img (29).jpg" alt="imagem do filme Dash e Lily">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="./img/img (30).jpg" alt="imagem do filme Atypical">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="./img/img (25).jpg" alt="imagem do filme One Day At A Time">
+            </div>
+        </div>
+        <h2 class="classificacao">Minha Lista</h2>
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-filme" src="./img/img (8).jpg" alt="imagem do filme Hotel Transylvania 2">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="./img/img (27).jpg" alt="imagem do filme Instiable">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="./img/img (11).jpg" alt="imagem do filme Love, Guaranteed">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="./img/img (25).jpg" alt="imagem do filme One Day At A Time">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="./img/img (22).jpg" alt="imagem do filme A Babysistter's Guide Monster Hunting">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="./img/img (13).jpg" alt="imagem do filme Corpse da Bride">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="./img/img (40).jpg" alt="imagem do filme The Witcher">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="./img/img (7).jpg" alt="imagem do filme Outlander">
+            </div>
+        </div>
+    </div>
+
+    <script src="https://kit.fontawesome.com/8648a8347d.js" crossorigin="anonymous"></script>
+    <script src="./js/owl/jquery.min.js"></script>
+    <script src="./js/owl/owl.carousel.min.js"></script>
+    <script src="./js/owl/setup.js"></script>
 
 </body> 
 </html>
